fix: add 'align' for explanation tooltip

--- a/src/ducks/Signals/signalFormManager/signalCrudForm/formParts/channels/TriggerChannelSettings.module.scss
+++ b/src/ducks/Signals/signalFormManager/signalCrudForm/formParts/channels/TriggerChannelSettings.module.scss
@@ -60,3 +60,7 @@
 .inputContainerLabel {
   margin: 0 0 0 auto;
 }
+
+.notifications {
+  display: flex;
+}
